--- a/calculator.css
+++ b/calculator.css
@@ -6,12 +6,18 @@
     width: 300px;
     height: 400px;
     padding: 20px;
+    border-radius: 10px;
     justify-self: center;
 }
 
 .displayBar {
     height: 60px;
     margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.buttonContainer {
+    display: flex;
 }
 
 .numberContainer {
@@ -19,7 +25,15 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 12px   
+       
+}
+
+.operatorContainer {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    gap: 5px;
+
 }
 
 button {
@@ -30,4 +44,16 @@ button {
 
 #add, #subtract, #multiply, #divide, #equals {
     border-radius: 20%;
+    height: 60px;
+    width: 60px;
+}
+
+.leftGameContainer {
+    display: flex;
+    flex-direction: column;
+}
+
+.madeBy {
+    
+    
 }
